--- a/views/map.ejs
+++ b/views/map.ejs
@@ -56,7 +56,7 @@
         </li>  
 		<li id="FD6" data-order="4"> 
             <span class="category_bg cafe"></span>
-            음식정
+            음식점
         </li>  
 		<li id="HP8" data-order="4"> 
             <span class="category_bg cafe"></span>
